--- a/index.html
+++ b/index.html
@@ -104,6 +104,10 @@
             margin-bottom: 15px;
         }
 
+        .pet-photo.face-focus {
+            object-position: center top;
+        }
+
         .back-btn {
             background: linear-gradient(45deg, #FF69B4, #FFB6C1);
             border: none;
@@ -188,8 +192,8 @@
         <div class="greeting-text">
             <strong>HOLAAAA,</strong><br>
             Yo, Milo, Cloe, Foca guatona y Gatito de complejo<br>
-            te deseamos un <strong>feliz día de las flores amarillas</strong><br>
-            <strong>BROOOOOOOOOOO⭐</strong>
+            te deseamos un <strong>feliz día de las flores amarillas<br>
+            Y A PACHO TAMBIEN BROOOOOOOOOOO⭐</strong>
         </div>
 
         <div class="pets-gallery">
@@ -202,7 +206,7 @@
             </div>
             
             <div class="pet-card" style="animation-delay: 0.6s;">
-                <img src="https://i.imgur.com/Jr4OgIU.jpeg" alt="Foca guatona" class="pet-photo">
+                <img src="https://i.imgur.com/Jr4OgIU.jpeg" alt="Foca guatona" class="pet-photo face-focus">
             </div>
             
             <div class="pet-card" style="animation-delay: 0.8s;">
